# eventManager-by-Timur

./: .gitignore  CMakeLists.txt  Event.cpp  EventManager.cpp  EventManager.h  main.cpp
data/: events.txt
include/: Event.h  console_cleaner.h  menu_manager.h  menu_managing.h  scripts.h
src/: EventManager.cpp  console_cleaner.cpp  main.cpp  menu_manager.cpp  menu_managing.cpp  scripts.cpp
tests/: CMakeLists.txt  test_event.cpp  test_event_manager.cpp  test_event_manager_errors.cpp
